tests/rules/samples/ko_too_many_instruction.out
[36mko_too_many_instruction.c[0m - [32mIsVarDeclaration[0m In "GlobalScope" from "None" line 1":
		<INT> <TAB> <IDENTIFIER=g_a> <SEMI_COLON> <SPACE> 
[36mko_too_many_instruction.c[0m - [32mIsVarDeclaration[0m In "GlobalScope" from "None" line 1":
		<INT> <TAB> <IDENTIFIER=g_b> <SEMI_COLON> <NEWLINE>
[36mko_too_many_instruction.c[0m - [32mIsEmptyLine[0m In "GlobalScope" from "None" line 2":
		<NEWLINE>
[36mko_too_many_instruction.c[0m - [32mIsFuncDeclaration[0m In "GlobalScope" from "None" line 3":
		<VOID> <TAB> <IDENTIFIER=f> <LPARENTHESIS> <VOID> <RPARENTHESIS> <NEWLINE>
[36mko_too_many_instruction.c[0m - [32mIsBlockStart[0m In "Function" from "GlobalScope" line 4":
		<LBRACE> <NEWLINE>
[36mko_too_many_instruction.c[0m - [32mIsFunctionCall[0m In "Function" from "GlobalScope" line 5":
		<TAB> <IDENTIFIER=write> <LPARENTHESIS> <CONSTANT=1> <COMMA> <SPACE> <STRING="a"> <COMMA> <SPACE> <CONSTANT=1> <RPARENTHESIS> <SEMI_COLON> <SPACE> 
[36mko_too_many_instruction.c[0m - [32mIsFunctionCall[0m In "Function" from "GlobalScope" line 5":
		<IDENTIFIER=write> <LPARENTHESIS> <CONSTANT=1> <COMMA> <SPACE> <STRING="a"> <COMMA> <SPACE> <CONSTANT=1> <RPARENTHESIS> <SEMI_COLON> <NEWLINE>
[36mko_too_many_instruction.c[0m - [32mIsBlockEnd[0m In "Function" from "GlobalScope" line 6":
		<RBRACE> <NEWLINE>
ko_too_many_instruction.c: Error!
Notice: GLOBAL_VAR_DETECTED  (line:   1, col:   1):	Global variable present in file. Make sure it is a reasonable choice.
Error: INVALID_HEADER       (line:   1, col:   1):	Missing or invalid 42 header
Notice: GLOBAL_VAR_DETECTED  (line:   1, col:  10):	Global variable present in file. Make sure it is a reasonable choice.
Error: TOO_MANY_INSTR       (line:   1, col:  10):	Too many instructions on a single line
Error: MISALIGNED_VAR_DECL  (line:   1, col:  17):	Misaligned variable declaration
Error: TOO_FEW_TAB          (line:   5, col:  23):	Missing tabs for indent level
Error: TOO_MANY_INSTR       (line:   5, col:  23):	Too many instructions on a single line
